# focus

./: CMakeLists.txt
2dx_merge/: CMakeLists.txt  eulerWindow.cpp  eulerWindow.h  mainWindow.cpp
app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp
app/conf/: old_config_porter.cpp  old_config_porter.hpp  parameters_configuration.hpp  project_images.hpp  project_preferences.hpp  user_preferences.hpp  user_projects.hpp
app/data/: image.hpp  parameter.hpp  project.hpp
app/dialogs/: new_project.hpp  parameters.hpp  preferences.cpp  preferences.hpp
app/managers/: context_manager.hpp
app/repositories/: icon_repo.hpp  path_repo.hpp  project_repo.hpp
app/resource/config/: user.preferences.conf.darwin  user.preferences.conf.linux
app/validator/: parameter_validator.hpp
app/widgets/: browser_widget.hpp  combo_input_widget.hpp  edit_set_widget.hpp  graphical_button.cpp  graphical_button.hpp  library_widget.cpp  library_widget.hpp  parameter_input.cpp  parameter_input.hpp  parameter_row.cpp  parameter_row.hpp  parameter_section.cpp  parameter_section.hpp  parameters_widget.cpp  parameters_widget.hpp  yesno_widget.hpp
app/windows/: image_window.cpp  image_window.hpp  library_window.cpp  library_window.hpp  merge_window.cpp  merge_window.hpp  process_window.cpp  process_window.hpp
app/wizards/: import_execute_page.hpp  import_images.hpp  import_images_wizard.hpp  import_options_page.hpp  import_result.hpp  import_wizard.hpp  label_wizard_page.hpp  new_project_wizard.hpp  open_project_wizard.hpp
kernel/2dx_merge/scripts-custom/: 2dx_backup.script
kernel/2dx_merge/scripts-singleparticle/: AnalyzeContainer.script  CreateContainer.script  DensityClean.script  GenerateInitModels.script  LoadOrientation.script  MeasureResolution.script  NNRefinement.script  RefineInitialTiltGeometry.script  SingleParticle_Picking.script
kernel/config/: 2dx_master.cfg
kernel/mrc/source/: CMakeLists.txt
kernel/mrc/source/2dx_single_particle_lib/: CMakeLists.txt
kernel/mrc/source/2dx_single_particle_lib/Config/: ConfigContainer.cpp
kernel/mrc/source/2dx_single_particle_lib/DataStructures/: Abstract3dData.hpp  ParticleContainer.cpp
kernel/mrc/source/2dx_single_particle_lib/Runners/: CMakeLists.txt  GenerateInitModel.cpp
kernel/mrc/source/2dx_single_particle_lib/Utilities/: DataContainerFunctions.hpp  MRCFileIO.hpp
kernel/mrc/source/2dx_single_particle_lib/eman2/libEM/: processor.cpp
